--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "setupTestFrameworkScriptFile": "./tests/setup.js"
+  },
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js --ignore tests",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
     "build": "NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps --prefix client && npm run build --prefix client",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -18,16 +22,19 @@
     "body-parser": "1.17.2",
     "concurrently": "3.5.0",
     "cookie-session": "2.0.0-beta.2",
+    "dotenv": "^16.3.1",
     "express": "4.15.3",
     "jest": "23.6.0",
     "migrate-mongoose": "3.2.2",
+    "mongodb": "^5.6.0",
     "mongoose": "5.10.11",
     "nodemon": "1.11.0",
     "passport": "0.3.2",
-    "passport-google-oauth20": "2.0.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "path-parser": "2.0.2",
     "puppeteer": "1.3.0",
-    "redis": "2.8.0",
+    "redis": "^4.6.7",
     "uuid": "3.2.1"
   }
 }
